# memex-python

./: API.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: perf.py
src/memex/: __init__.py  _time.py  _uuid.py  bulk.py  commands.py  envelope.py  errors.py  factories.py  graph.py  integrity.py  intent.py  models.py  query.py  reducer.py  replay.py  retrieval.py  schemas.py  serialization.py  stats.py  store.py  task.py  transplant.py
tests/: support.py  test_bugfix_and_coverage.py  test_bugfix_bulk_retract_cascade.py  test_bugfix_holes.py  test_bugfix_regressions.py  test_bugfix_reid_ordering.py  test_bugfix_surface_contradictions_dedup.py  test_bugfix_sweep.py  test_bulk.py  test_cross_graph_fields.py  test_edge_cases.py  test_edge_cases_v2.py  test_envelope.py  test_graph.py  test_helpers.py  test_integrity.py  test_intent.py  test_perf_equivalence.py  test_phase1_foundation.py  test_query.py  test_query_advanced.py  test_reducer.py  test_replay.py  test_retrieval.py  test_serialization.py  test_setup.py  test_stats.py  test_store.py  test_task.py  test_transplant.py  test_types.py
